# simpleguardhome

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-entrypoint.sh  healthcheck.py  monitor.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: docker-build.yml
rules_backup/: rules_backups_go_here
src/simpleguardhome/: __init__.py  adguard.py  config.py  main.py
src/simpleguardhome/templates/: index.html
userscript/: README.md  simpleguardhome-404-checker.user.js
