[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleguardhome"
version = "0.1.0"
description = "SimpleGuardHome - A lightweight AdGuardHome UI"
authors = [
    {name = "SimpleGuardHome Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
    "pydantic",
    "jinja2",
]

[tool.setuptools]
# Using explicit package configuration
package-dir = {"" = "src"}
packages = ["simpleguardhome"]

# Include all package data
[tool.setuptools.package-data]
"*" = ["*.ico", "templates/*.html"]

# Explicitly include the package data
[options.package_data]
simpleguardhome = [
    "templates/*",
    "favicon.ico"
]

# Make sure data files are included
[options]
include_package_data = true