[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleguardhome"
version = "0.1.0"
description = "SimpleGuardHome - A lightweight AdGuardHome UI"
authors = [
    {name = "SimpleGuardHome Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
    "pydantic",
    "jinja2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["simpleguardhome"]

[tool.setuptools.package-data]
simpleguardhome = [
    "templates/*.html",
    "favicon.ico"
]